--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,25 @@ version: "3.8"
 
 services:
   backend:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "5000:5000"
     volumes:
       - .:/app
+      - sqlite-data:/app/data  # Volume para persistir dados do SQLite
     environment:
       - FLASK_ENV=development
 
   frontend:
-    build: ./frontend-frota
+    build:
+      context: ./frontend-frota
+      dockerfile: Dockerfile
     ports:
       - "80:80"
     depends_on:
       - backend
+
+volumes:
+  sqlite-data:
